@@ -1,3 +1,12 @@
+2009-12-06  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        [bzt] Rename AbstractTryQueue to AbstractReviewQueue
+        https://bugs.webkit.org/show_bug.cgi?id=32202
+
+        * Scripts/modules/commands/queues.py:
+
 2009-12-05  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Eric Seidel.
